--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.10.0",
     "husky": "^4.3.7",
     "jest": "^26.6.3",
@@ -55,9 +56,9 @@
     "react": "^16.13.1",
     "react-native": "^0.62.1",
     "react-test-renderer": "^16.13.1",
+    "semantic-release": "^17.3.1",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
-    "semantic-release": "^17.3.1"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
