--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint": "eslint --fix 'src/**/*.tsx'",
     "prettier": "prettier --write 'src/**/*.tsx'",
     "commit": "git-cz",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -37,28 +39,28 @@
   "devDependencies": {
     "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
-    "@types/jest": "^26.0.22",
-    "@types/react": "^17.0.3",
-    "@types/react-native": "^0.64.2",
-    "@typescript-eslint/parser": "^4.21.0",
-    "babel-jest": "^26.6.3",
+    "@types/jest": "^26.0.24",
+    "@types/react": "^17.0.14",
+    "@types/react-native": "^0.64.12",
+    "@typescript-eslint/parser": "^4.28.4",
+    "babel-jest": "^27.0.6",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-react-native": "^3.10.0",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
+    "eslint-plugin-react-native": "^3.11.0",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.0.1",
+    "prettier": "^2.3.2",
     "react": "^16.13.1",
     "react-native": "^0.62.1",
     "react-test-renderer": "^17.0.2",
-    "semantic-release": "^17.4.2",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "semantic-release": "^17.4.4",
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
@@ -67,11 +69,6 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
