--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "native-smart-scroll-container",
   "version": "1.0.0",
-  "description": "Enable scroll based on content size",
+  "description": "Enable scroll in the container based on content size",
   "author": "Jakub Biesiada",
   "license": "MIT",
   "main": "lib/index.js",
@@ -26,11 +26,19 @@
   },
   "keywords": [
     "react",
+    "android",
+    "ios",
+    "mobile",
     "react-native",
     "component",
+    "touch",
     "container",
     "scroll",
-    "smart"
+    "smart",
+    "auto",
+    "disable",
+    "expo",
+    "enable"
   ],
   "bugs": {
     "url": "https://github.com/native-ly/native-smart-scroll-container/issues"
@@ -40,12 +48,12 @@
     "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
     "@types/jest": "^26.0.24",
-    "@types/react": "^17.0.14",
+    "@types/react": "^17.0.15",
     "@types/react-native": "^0.64.12",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.5",
     "babel-jest": "^27.0.6",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
@@ -53,7 +61,7 @@
     "eslint-plugin-react-native": "^3.11.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
-    "lint-staged": "^11.0.1",
+    "lint-staged": "^11.1.1",
     "prettier": "^2.3.2",
     "react": "^16.13.1",
     "react-native": "^0.62.1",
