--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "checkJs": false,
     "declaration": true,
-    "jsx": "react",
+    "jsx": "react-native",
     "outDir": "lib",
     "strict": true,
     "moduleResolution": "Node",
