--- a/package.json
+++ b/package.json
@@ -47,30 +47,31 @@
   },
   "homepage": "https://github.com/native-ly/native-smart-scroll-container#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
     "@testing-library/jest-native": "^4.0.2",
-    "@testing-library/react-native": "^7.2.0",
-    "@types/jest": "^27.0.1",
-    "@types/react": "^17.0.19",
-    "@types/react-native": "^0.64.13",
-    "@typescript-eslint/parser": "^4.30.0",
-    "babel-jest": "^27.1.0",
+    "@testing-library/react-native": "^8.0.0",
+    "@types/jest": "^27.0.2",
+    "@types/react": "^17.0.30",
+    "@types/react-native": "^0.65.7",
+    "@typescript-eslint/parser": "^5.0.0",
+    "babel-jest": "^27.2.5",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.11.0",
     "husky": "^7.0.2",
-    "jest": "^27.1.0",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2",
+    "jest": "^27.2.5",
+    "lint-staged": "^11.2.3",
+    "prettier": "^2.4.1",
     "react": "^16.13.1",
     "react-native": "^0.62.1",
     "react-test-renderer": "^17.0.2",
-    "semantic-release": "^17.4.7",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.2"
+    "semantic-release": "^18.0.0",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
