--- a/package.json
+++ b/package.json
@@ -2,28 +2,34 @@
   "name": "native-smart-scroll-container",
   "version": "1.0.0",
   "description": "Enable scroll in the container based on content size",
-  "author": "Jakub Biesiada",
-  "license": "MIT",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/commonjs/index",
+  "module": "lib/module/index",
+  "types": "lib/typescript/index.d.ts",
+  "react-native": "src/index",
+  "source": "src/index",
+  "files": [
+    "src",
+    "lib",
+    "android",
+    "ios",
+    "cpp",
+    "native-smart-scroll-container.podspec",
+    "!lib/typescript/example",
+    "!android/build",
+    "!ios/build",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
+  ],
   "scripts": {
-    "prepack": "npm run prettier && npm run lint && npm run build",
-    "clean": "rimraf lib/*",
-    "build": "tsc",
-    "prebuild": "npm run clean",
-    "test": "jest --coverage",
-    "watch": "npm run build -- --watch",
-    "watch:test": "npm run test -- --watch",
-    "lint": "eslint --fix 'src/**/*.tsx'",
-    "prettier": "prettier --write 'src/**/*.tsx'",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "prepare": "husky install",
-    "pre-commit": "lint-staged"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/native-ly/native-smart-scroll-container.git"
+    "test": "jest",
+    "typescript": "tsc --noEmit",
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "prepare": "bob build",
+    "release": "release-it",
+    "example": "yarn --cwd example",
+    "pods": "cd example && pod-install --quiet",
+    "bootstrap": "yarn example && yarn && yarn pods"
   },
   "keywords": [
     "react",
@@ -42,50 +48,113 @@
     "expo",
     "enable"
   ],
+  "repository": "https://github.com/native-ly/native-smart-scroll-container",
+  "author": "Jakub Biesiada <biesiadajakub@icloud.com> (https://github.com/native-ly)",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/native-ly/native-smart-scroll-container/issues"
   },
   "homepage": "https://github.com/native-ly/native-smart-scroll-container#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@testing-library/jest-native": "^4.0.4",
-    "@testing-library/react-native": "^9.0.0",
-    "@types/jest": "^27.0.3",
-    "@types/react": "^17.0.37",
-    "@types/react-native": "^0.66.9",
-    "@typescript-eslint/parser": "^5.7.0",
-    "babel-jest": "^27.4.5",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.5.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-react-native": "^4.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.4.5",
-    "lint-staged": "^12.1.3",
-    "prettier": "^2.5.1",
-    "react": "^17.0.2",
-    "react-native": "^0.66.4",
-    "react-test-renderer": "^17.0.2",
-    "semantic-release": "^18.0.1",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.5.4"
+    "@commitlint/config-conventional": "^11.0.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@release-it/conventional-changelog": "^2.0.0",
+    "@testing-library/react-native": "^9.1.0",
+    "@types/jest": "^26.0.0",
+    "@types/react": "^16.9.19",
+    "@types/react-native": "0.62.13",
+    "commitlint": "^11.0.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^6.0.0",
+    "jest": "^26.0.1",
+    "pod-install": "^0.1.0",
+    "prettier": "^2.0.5",
+    "react": "16.13.1",
+    "react-native": "0.63.4",
+    "react-native-builder-bob": "^0.18.0",
+    "release-it": "^14.2.2",
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-native": ">=0.59.0"
+    "react": "*",
+    "react-native": "*"
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules",
+      "<rootDir>/lib/"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
     }
   },
-  "lint-staged": {
-    "src/**/*.tsx": [
-      "npm run prettier",
-      "npm run lint"
+  "eslintConfig": {
+    "root": true,
+    "extends": [
+      "@react-native-community",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "quoteProps": "consistent",
+          "singleQuote": true,
+          "tabWidth": 2,
+          "trailingComma": "es5",
+          "useTabs": false
+        }
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ],
+  "prettier": {
+    "quoteProps": "consistent",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "useTabs": false
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
     ]
   }
 }
