--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,27 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "ESNext",
-    "checkJs": false,
-    "declaration": true,
-    "jsx": "react",
-    "outDir": "lib",
-    "strict": true,
-    "moduleResolution": "Node",
+    "baseUrl": "./",
+    "paths": {
+      "native-smart-scroll-container": ["./src/index"]
+    },
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
     "esModuleInterop": true,
-    "skipLibCheck": true
-  },
-  "include": ["src"]
+    "importsNotUsedAsValues": "error",
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react",
+    "lib": ["esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noImplicitUseStrict": false,
+    "noStrictGenericChecks": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "esnext"
+  }
 }
